--- a/demo/simpledemo/index.html
+++ b/demo/simpledemo/index.html
@@ -5,13 +5,70 @@
     <title>Colchic demo</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style type="text/css">
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        
+        .container {
+            background-color: #CCCCCC;
+            max-width: 900px;
+            width: 100%;
+            height: 100%;
+            margin-left: auto;
+            margin-right: auto;
+            position: relative;
+        }
+        
+        .element {
+            width: 100%;
+            height: 150px;
+            border-radius: 8px;
+            border-style: solid;
+            border-width: 1px;
+            border-color: #333333;
+            background-color: #888888;
+        }
+    </style>
 </head>
 
 <body>
     <script src="colchic.js"></script>
+    <div class="container">
+        <div class="line">
+            <div class="col-4">
+                <div class="element">element 1</div>
+            </div>
+            <div class="col-4">
+                <div class="element">element centre haut</div>
+            </div>
+            <div class="col-8">
+                <div class="element">element droite haut</div>
+            </div>
+        </div>
+        <div class="line">
+            <div class="col-4">
+                <div class="element">element 1</div>
+            </div>
+            <div class="col-4">
+                <div class="element">element centre haut</div>
+            </div>
+            <div class="col-8">
+                <div class="element">element droite haut</div>
+            </div>
+        </div>
+    </div>
 
 
     <script language="javascript">
+        Colchic.create(".container", 16, "30px", "30px")
+            .media("screen and (max-width: 900px)", 8, "5px", "5px")
+            .media("screen and (max-width: 500px)", 1, "0px", "0px");
     </script>
 </body>
 
