fix margin bottom

--- a/demo/simpledemo/index.html
+++ b/demo/simpledemo/index.html
@@ -53,10 +53,14 @@
         </div>
         <div class="line">
             <div class="col-4">
-                <div class="element">element 1</div>
+                <div class="element">
+                    <div>toto</div>
+                    <div>element 1</div>
+                </div>
             </div>
             <div class="col-4">
-                <div class="element">element centre haut</div>
+                <div class="element">element centre centre</div>
+                <div class="element">element centre bas</div>
             </div>
             <div class="col-8">
                 <div class="element">element droite haut</div>
