fix linespace for the last line

--- a/demo/simpledemo/index.html
+++ b/demo/simpledemo/index.html
@@ -83,23 +83,7 @@
                 <div class="element">element centre bas</div>
             </div>
             <div class="col-8">
-                <div class="element double-height sub-grid">
-                    <div class="line">
-                        <div class="col-2">
-                            <div class="element red">A</div>
-                        </div>
-                        <div class="col-2">
-                            <div class="element blue">B</div>
-                        </div>
-                    </div>
-                    <div class="line">
-                        <div class="col-2">
-                            <div class="element blue">C</div>
-                        </div>
-                        <div class="col-2">
-                            <div class="element red">D</div>
-                        </div>
-                    </div>
+                <div class="element double-height">
                 </div>
             </div>
         </div>
@@ -111,7 +95,7 @@
             .media("screen and (max-width: 900px)", 8, "5px", "5px")
             .media("screen and (max-width: 500px)", 1, "10px", "10px");
 
-        Colchic.create(".sub-grid", 4, "0px", "0px")
+        //Colchic.create(".sub-grid", 4, "0px", "0px")
     </script>
 </body>
 
